<resources>
    <string name="app_name">Visitor Guard </string>
    <string name="guardlogin">Login</string>
    <string name="tdvistor">Today\'s Visitors : </string>
    <string name="guestname">Prasad Pawar Patil Pawar Prasad Patil</string>
    <string name="knowngst">KNOWN GUEST</string>
    <string name="uknowngst">UNKNOWN GUEST</string>
    <string name="mobilenotxt">+919999999999</string>
    <string name="hint">Enter Your Mobile Number</string>
    <string name="hint1">Enter Your Pin</string>
    <string name="dummytxt">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="notes">Note :please check valid identity proof
of guest before check-in </string>
    <string name="mobile">MOBILE</string>
    <string name="pin">PIN</string>
    <string name="tguests">Today\'s\nGuests</string>
    <string name="tguestscount">20</string>
    <string name="pintxt">********</string>
    <string name="apart">Sai Apartment</string>
    <string name="logintxt">Estate Name :</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
</resources>
